ApexBasics/force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>