ApexBasics/force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Defines Type of Product</description>
    <inlineHelpText>Select Category</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Home Appliances</fullName>
            </value>
            <value>
                <fullName>Foot wear</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>