ApexBasics/force-app/main/default/objects/Product__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Fan</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Kitchen Appliances</fullName>
            </value>
            <value>
                <fullName>Woman&#39;s Shoe</fullName>
            </value>
            <value>
                <fullName>Men&#39;s Shoe</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Fitness</fullName>
            </value>
            <value>
                <fullName>Baggage &amp; Luggage</fullName>
            </value>
            <value>
                <fullName>Sofa</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Dining Table</fullName>
            </value>
            <value>
                <fullName>Bed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>